Added tracking url visitors to the show action.

--- a/app/views/tiny_urls/info.html.erb
+++ b/app/views/tiny_urls/info.html.erb
@@ -2,5 +2,5 @@
 
 <ul>
   <li>Tiny url: <%= link_to show_url(@tiny_url.mini_url), show_url(@tiny_url.mini_url) %></li>
-  <li>Original url: <%= link_to original_url_formatter(@tiny_url.original_url), original_url_formatter(@tiny_url.original_url) %></li>
+  <li>Original url: <%= link_to @tiny_url.formatted_original_url, @tiny_url.formatted_original_url %></li>
 </ul>
