Added url visitor info.

--- a/app/views/tiny_urls/index.html.erb
+++ b/app/views/tiny_urls/index.html.erb
@@ -1,3 +1,5 @@
+<%= render 'shared/flash_messages' %>
+
 <h2>Enter a URL to be tinified!</h2>
 
 <%= form_for TinyUrl.new, url: tiny_urls_path, method: :post do |f| %>
