--- a/app/views/tiny_urls/info.html.erb
+++ b/app/views/tiny_urls/info.html.erb
@@ -3,7 +3,7 @@
 <h2>Tiny URL Info:</h2>
 
 <ul>
-  <li>Tiny url: <%= link_to show_url(@tiny_url.mini_url), show_url(@tiny_url.mini_url) %></li>
+  <li>Tiny url: <%= link_to show_url(@tiny_url.mini_url), show_url(@tiny_url.mini_url), target: :_blank %></li>
   <li>Original url: <%= link_to @tiny_url.formatted_original_url, @tiny_url.formatted_original_url %></li>
 </ul>
 
